<resources>
    <string name="app_name">Schedule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_button">Get Started!</string>
    <string name="start_title">Schedule App</string>
    <string name="start_description">Welcome to your efficient scheduling companion!
        Stay organized, stay on track.</string>
    <string name="or_enter_screen">or</string>
    <string name="log_in">Log In</string>
    <string name="log_up">Log Up</string>

    <string name="reg_title">Registration</string>
    <string name="name_holder">Name</string>
    <string name="surname_holder">Surname</string>
    <string name="email_holder">Email</string>
    <string name="password_holder">Password</string>
    <string name="reg_button">Register</string>
    <string name="warning_message">Please, enter all fields.</string>
    <string name="smth_went_wrong">Something went wong</string>

    <string name="login_title">Login</string>

    <string name="subjects_title">Subjects</string>
    <string name="hello_text">Hi, </string>
    <string name="math">Math</string>
    <string name="schedule_title">Schedule</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="lecture">Lecture</string>
    <string name="practise">Practise</string>
    <string name="auditorium">aud. %1$s</string>

    <string name="create_sch">Create schedule</string>
    <string name="create_sch_subject">Subject: </string>
    <string name="create_sch_type">Type: </string>
    <string name="create_sch_audit">Auditorium: </string>
    <string name="create_sch_time">Time: </string>
    <string name="lesson_counter">Lessons: %d</string>
    <string name="hint">Schedule title</string>

    <string name="add_lesson">Add lesson</string>
    <string name="add_free">Add free lesson</string>
    <string name="next_day">Next day</string>
    <string name="create_sch_btn">Create Schedule</string>
    <string name="toast_warning">Please, enter schedule title</string>

    <string name="add_subjects">Add Subjects</string>
    <string name="add_subject_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="subjects_counter">Subjects: %d</string>
    <string name="subjects_warning_blank">Please, enter subject name.</string>

    <string name="subjects_frag_title">Your subjects</string>
    <string name="subjects_reminders">Your reminders</string>
    <string name="subjects_add_reminder_button">Add reminder</string>

    <string name="profile_schedules">Your schedules</string>

    <string name="nav_menu_schedule">Schedule</string>
    <string name="nav_menu_subjects">Subjects</string>
    <string name="nav_menu_profile">Profile</string>

    <string name="schedule_fragment_empty_list">There is no schedule.\nAdd new schedule in "Profile".</string>
</resources>