<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        app:cornerRadius="20dp"
        android:textSize="20sp"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:iconGravity="end"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:layout_marginVertical="20dp"
        android:text="@string/or_enter_screen"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/log_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="48dp"
        android:text="@string/log_up"
        app:cornerRadius="20dp"
        android:textSize="20sp"
        app:icon="@drawable/baseline_login_24"
        app:iconGravity="end" />
</LinearLayout>