<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginHorizontal="128dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_subjects"
        style="@style/TextH"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/subject_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextH"
        android:textStyle="normal"
        android:layout_marginVertical="16dp"/>
    <TextView
        android:id="@+id/subjects_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextNormal"
        android:text="@string/subjects_counter"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/subjects_add_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/add_subject_button"
            android:layout_marginEnd="64dp"/>

        <Button
            android:id="@+id/subjects_cancel_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"/>
    </LinearLayout>
</LinearLayout>